--- a/server/dashboard/templates/dashboard/dev-front-card5.html
+++ b/server/dashboard/templates/dashboard/dev-front-card5.html
@@ -247,6 +247,98 @@
             </li>
 
 
+
+            <li>
+                <form action="{% url 'dashboard-dev-generic' %}" method="POST" role="form">
+                    {% csrf_token %}
+                    <input type="hidden" id="dev-command" value="send-bout_planning_notification-to-user" name="dev-command" />
+
+                    <div class="form-row">
+                        <div class="col">
+                            Send Bout Planning notification to a user.
+                        </div>
+                    </div>
+
+                    <div class="form-row">
+                        <div class="col">
+                            <select class="form-select form-control m-1" id="username" name="username">
+                                <option selected>Select a User</option>
+                                {% for puser in participant_users %}
+                                <option value="{{puser.username}}">{{puser.study.name}} | {{puser.cohort.name}} |
+                                    {{puser.username}}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="col">
+                            <button type="submit" class="btn btn-primary mb-2 m-1">Send</button>
+                        </div>
+                    </div>
+                </form>
+            </li>
+
+            <li>
+                <form action="{% url 'dashboard-dev-generic' %}" method="POST" role="form">
+                    {% csrf_token %}
+                    <input type="hidden" id="dev-command" value="send-daily_ema_notification-to-user" name="dev-command" />
+
+                    <div class="form-row">
+                        <div class="col">
+                            Send Daily EMA notification to a user.
+                        </div>
+                    </div>
+
+                    <div class="form-row">
+                        <div class="col">
+                            <select class="form-select form-control m-1" id="username" name="username">
+                                <option selected>Select a User</option>
+                                {% for puser in participant_users %}
+                                <option value="{{puser.username}}">{{puser.study.name}} | {{puser.cohort.name}} |
+                                    {{puser.username}}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="col">
+                            <button type="submit" class="btn btn-primary mb-2 m-1">Send</button>
+                        </div>
+                    </div>
+                </form>
+            </li>
+
+            <li>
+                <form action="{% url 'dashboard-dev-generic' %}" method="POST" role="form">
+                    {% csrf_token %}
+                    <input type="hidden" id="dev-command" value="send-daily_goal_notification-to-user" name="dev-command" />
+
+                    <div class="form-row">
+                        <div class="col">
+                            Send Daily Goal notification to a user.
+                        </div>
+                    </div>
+
+                    <div class="form-row">
+                        <div class="col">
+                            <select class="form-select form-control m-1" id="username" name="username">
+                                <option selected>Select a User</option>
+                                {% for puser in participant_users %}
+                                <option value="{{puser.username}}">{{puser.study.name}} | {{puser.cohort.name}} |
+                                    {{puser.username}}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="col">
+                            <button type="submit" class="btn btn-primary mb-2 m-1">Send</button>
+                        </div>
+                    </div>
+                </form>
+            </li>
+
+
         </ul>
     </div>
 </div>
